@@ -24,11 +24,11 @@
 <h4>Description</h4>
 
 <pre>discontiguous(Functor/Arity)
-discontiguous(Functor1/Arity1, Functor2/Arity2, ...)
+discontiguous((Functor1/Arity1, Functor2/Arity2, ...))
 discontiguous([Functor1/Arity1, Functor2/Arity2, ...])
 
 discontiguous(Functor//Arity)
-discontiguous(Functor1//Arity1, Functor2//Arity2, ...)
+discontiguous((Functor1//Arity1, Functor2//Arity2, ...))
 discontiguous([Functor1//Arity1, Functor2//Arity2, ...])</pre>
 <p>
 Declares discontiguous predicates and discontiguous grammar rule non-terminals. The use of this directive should be avoided as not all Prolog compilers support discontiguous predicates.
@@ -44,14 +44,14 @@ discontiguous(+non_terminal_indicator_term)</pre>
 
 <pre>:- discontiguous(counter/1).
 
-:- discontiguous(lives/2, works/2).
+:- discontiguous((lives/2, works/2)).
 
 :- discontiguous([db/4, key/2, file/3]).</pre>
 
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: October 26, 2006</span>
+		<span>Last updated on: October 21, 2009</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="alias3.html">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="dynamic1.html">next</a></span><br/>
