@@ -24,34 +24,51 @@
 <h4>Description</h4>
 
 <pre>dynamic(Functor/Arity)
-dynamic(Functor1/Arity1, Functor2/Arity2, ...)
+dynamic((Functor1/Arity1, Functor2/Arity2, ...))
 dynamic([Functor1/Arity1, Functor2/Arity2, ...])
 
+dynamic(Entity::Functor/Arity)
+dynamic((Entity1::Functor1/Arity1, Entity2::Functor2/Arity2, ...))
+dynamic([Entity1::Functor1/Arity1, Entity2::Functor2/Arity2, ...])
+
 dynamic(Functor//Arity)
-dynamic(Functor1//Arity1, Functor2//Arity2, ...)
-dynamic([Functor1//Arity1, Functor2//Arity2, ...])</pre>
+dynamic((Functor1//Arity1, Functor2//Arity2, ...))
+dynamic([Functor1//Arity1, Functor2//Arity2, ...])
+
+dynamic(Entity::Functor//Arity)
+dynamic((Entity1::Functor1//Arity1, Entity2::Functor2//Arity2, ...))
+dynamic([Entity1::Functor1//Arity1, Entity2::Functor2//Arity2, ...])</pre>
 <p>
 Declares dynamic predicates and dynamic grammar rule non-terminals. Note that an object can be static and have both static and dynamic predicates/non-terminals. Dynamic predicates cannot be declared as synchronized. When the dynamic predicates are local to an object, declaring them also as private predicates allows the Logtalk compiler to generated optimized code for asserting and retracting predicate clauses. Categories can also contain dynamic predicate directives but cannot contain clauses for dynamic predicates.
+</p>
+<p>
+The predicate indicators (non-terminal indicators) can be explicitly qualified with an object identifier or a category identifier when the predicates (non-terminals) are also declared multifile.
 </p>
 
 <h4>Template and modes</h4>
 
 <pre>dynamic(+predicate_indicator_term)
-dynamic(+non_terminal_indicator_term)</pre>
+dynamic(+non_terminal_indicator_term)
+
+dynamic(+object_identifier::+predicate_indicator_term)
+dynamic(+object_identifier::+non_terminal_indicator_term)
+
+dynamic(+category_identifier::+predicate_indicator_term)
+dynamic(+category_identifier::+non_terminal_indicator_term)</pre>
 
 
 <h4>Examples</h4>
 
 <pre>:- dynamic(counter/1).
 
-:- dynamic(lives/2, works/2).
+:- dynamic((lives/2, works/2)).
 
 :- dynamic([db/4, key/2, file/3]).</pre>
 
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: July 15, 2008</span>
+		<span>Last updated on: October 21, 2009</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="discontiguous1.html">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="info2.html">next</a></span><br/>
