@@ -24,12 +24,20 @@
 <h4>Description</h4>
 
 <pre>multifile(Functor/Arity)
-multifile(Functor1/Arity1, Functor2/Arity2, ...)
+multifile((Functor1/Arity1, Functor2/Arity2, ...))
 multifile([Functor1/Arity1, Functor2/Arity2, ...])
 
+multifile(Entity::Functor/Arity)
+multifile((Entity1::Functor1/Arity1, Entity2::Functor2/Arity2, ...))
+multifile([Entity1::Functor1/Arity1, Entity2::Functor2/Arity2, ...])
+
 multifile(Functor//Arity)
-multifile(Functor1//Arity1, Functor2//Arity2, ...)
-multifile([Functor1//Arity1, Functor2//Arity2, ...])</pre>
+multifile((Functor1//Arity1, Functor2//Arity2, ...))
+multifile([Functor1//Arity1, Functor2//Arity2, ...])
+
+multifile(Entity::Functor//Arity)
+multifile((Entity1::Functor1//Arity1, Entity2::Functor2//Arity2, ...))
+multifile([Entity1::Functor1//Arity1, Entity2::Functor2//Arity2, ...])</pre>
 <p>
 Declares multifile predicates and multifile grammar rule non-terminals. This directive can only be used with back-end Prolog compilers fully supporting the multifile directive.
 </p>
@@ -37,17 +45,24 @@ Declares multifile predicates and multifile grammar rule non-terminals. This dir
 <h4>Template and modes</h4>
 
 <pre>multifile(+predicate_indicator_term)
-multifile(+non_terminal_indicator_term)</pre>
+multifile(+non_terminal_indicator_term)
+
+multifile(+object_identifier::+predicate_indicator_term)
+multifile(+object_identifier::+non_terminal_indicator_term)
+
+multifile(+category_identifier::+predicate_indicator_term)
+multifile(+category_identifier::+non_terminal_indicator_term)</pre>
 
 
 <h4>Examples</h4>
 
-<pre>:- multifile(table/3).</pre>
+<pre>:- multifile(table/3).
+:- multifile(user::hook/2).</pre>
 
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: June 12, 2009</span>
+		<span>Last updated on: October 21, 2009</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="mode2.html">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="op3.html">next</a></span><br/>
