@@ -24,11 +24,11 @@
 <h4>Description</h4>
 
 <pre>private(Functor/Arity)
-private(Functor1/Arity1, Functor2/Arity2, ...)
+private((Functor1/Arity1, Functor2/Arity2, ...))
 private([Functor1/Arity1, Functor2/Arity2, ...])
 
 private(Functor//Arity)
-private(Functor1//Arity1, Functor2//Arity2, ...)
+private((Functor1//Arity1, Functor2//Arity2, ...))
 private([Functor1//Arity1, Functor2//Arity2, ...])</pre>
 <p>
 Declares private predicates and private grammar rule non-terminals. A private predicate can only be called from the object containing the private directive. A private non-terminal can only be used in a call of the <a title="Consult reference manual" href="../methods/phrase2.html"><code>phrase/2</code></a> and <a title="Consult reference manual" href="../methods/phrase3.html"><code>phrase/3</code></a> methods from the object containing the private directive.
@@ -43,14 +43,14 @@ private(+non_terminal_indicator_term)</pre>
 
 <pre>:- private(counter/1).
 
-:- private(init/1, free/1).
+:- private((init/1, free/1)).
 
 :- private([data/3, key/1, keys/1]).</pre>
 
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: October 26, 2006</span>
+		<span>Last updated on: October 21, 2009</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="op3.html">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="protected1.html">next</a></span><br/>
