@@ -24,11 +24,11 @@
 <h4>Description</h4>
 
 <pre>protected(Functor/Arity)
-protected(Functor1/Arity1, Functor2/Arity2, ...)
+protected((Functor1/Arity1, Functor2/Arity2, ...))
 protected([Functor1/Arity1, Functor2/Arity2, ...])
 
 protected(Functor//Arity)
-protected(Functor1//Arity1, Functor2//Arity2, ...)
+protected((Functor1//Arity1, Functor2//Arity2, ...))
 protected([Functor1//Arity1, Functor2//Arity2, ...])</pre>
 <p>
 Declares protected predicates and protected grammar rule non-terminals. A protected predicate can only be called from the object containing the directive or from an object that inherits the directive. A protected non-terminal can only be used as an argument in a <a title="Consult reference manual" href="../methods/phrase2.html"><code>phrase/2</code></a> and <a title="Consult reference manual" href="../methods/phrase3.html"><code>phrase/3</code></a> messages sent from the object containing the directive or from an object that inherits the directive.
@@ -44,14 +44,14 @@ protected(+non_terminal_indicator_term)</pre>
 
 <pre>:- protected(init/1).
 
-:- protected(print/2, convert/4).
+:- protected((print/2, convert/4)).
 
 :- protected([load/1, save/3]).</pre>
 
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: October 26, 2006</span>
+		<span>Last updated on: October 21, 2009</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="private1.html">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="public1.html">next</a></span><br/>
