@@ -24,11 +24,11 @@
 <h4>Description</h4>
 
 <pre>public(Functor/Arity)
-public(Functor1/Arity1, Functor2/Arity2, ...)
+public((Functor1/Arity1, Functor2/Arity2, ...))
 public([Functor1/Arity1, Functor2/Arity2, ...])
 
 public(Functor//Arity)
-public(Functor1//Arity1, Functor2//Arity2, ...)
+public((Functor1//Arity1, Functor2//Arity2, ...))
 public([Functor1//Arity1, Functor2//Arity2, ...])</pre>
 <p>
 Declares public predicates and public grammar rule non-terminals. A public predicate can be called from any object. A public non-terminal can be used as an argument in <a title="Consult reference manual" href="../methods/phrase2.html"><code>phrase/2</code></a> and <a title="Consult reference manual" href="../methods/phrase3.html"><code>phrase/3</code></a> messages sent from any object.
@@ -44,14 +44,14 @@ public(+non_terminal_indicator_term)</pre>
 
 <pre>:- public(ancestor/1).
 
-:- public(instance/1, instances/1).
+:- public((instance/1, instances/1)).
 
 :- public([leaf/1, leaves/1]).</pre>
 
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: October 26, 2006</span>
+		<span>Last updated on: October 21, 2009</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="protected1.html">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="uses2.html">next</a></span><br/>
