@@ -24,11 +24,11 @@
 <h4>Description</h4>
 
 <pre>synchronized(Functor/Arity)
-synchronized(Functor1/Arity1, Functor2/Arity2, ...)
+synchronized((Functor1/Arity1, Functor2/Arity2, ...))
 synchronized([Functor1/Arity1, Functor2/Arity2, ...])
 
 synchronized(Functor//Arity)
-synchronized(Functor1//Arity1, Functor2//Arity2, ...)
+synchronized((Functor1//Arity1, Functor2//Arity2, ...))
 synchronized([Functor1//Arity1, Functor2//Arity2, ...])</pre>
 <p>
 Declares synchronized predicates and synchronized grammar rule non-terminals. A synchronized predicate (or synchronized non-terminal) is protected by a mutex in order to allow for thread synchronization when proving a call to the predicate (or non-terminal). All predicates declared in the same synchronized directive share the same mutex. In order to use a separate mutex for each predicate (so that they are independently synchronized), a per-predicate synchronized directive must be used.
@@ -47,14 +47,14 @@ synchronized(+non_terminal_indicator_term)</pre>
 
 <pre>:- synchronized(db_update/1).
 
-:- synchronized(write_stream/2, read_stream/2).
+:- synchronized((write_stream/2, read_stream/2)).
 
 :- synchronized([add_to_queue/2, remove_from_queue/2]).</pre>
 
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: May 23, 2008</span>
+		<span>Last updated on: October 21, 2009</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="public1.html">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="uses2.html">next</a></span><br/>
