@@ -35,7 +35,7 @@
 		<br/>
 		<span>http://logtalk.org/</span>
 	</p>
-	<p class="date">Last updated on June 30, 2009</p>
+	<p class="date">Last updated on October 21, 2009</p>
 </div>
 
 <div class="toc">
