@@ -75,7 +75,7 @@ The first argument should be either a variable or the name of the new protocol (
 <p>
 For instance, the call:
 </p>
-<pre>| ?- create_protocol(ppp, [extends(qqq)], [public(foo/1, bar/1)]).</pre>
+<pre>| ?- create_protocol(ppp, [extends(qqq)], [public([foo/1, bar/1])]).</pre>
 <p>
 is equivalent to compiling and loading the protocol:
 </p>
@@ -84,7 +84,7 @@ is equivalent to compiling and loading the protocol:
 
     :- dynamic.
 
-    :- public(foo/1, bar/1).
+    :- public([foo/1, bar/1]).
 
 :- end_protocol.</pre>
 <p>
@@ -234,7 +234,7 @@ Logtalk defines a built-in protocol named <code>monitoring</code> that contains 
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: June 30, 2009</span>
+		<span>Last updated on: October 21, 2009</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="objects.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="categories.html">next</a></span><br/>
